Update test dependencies and configure maven.surefire plugin